tests/compile_fail/invalid_lit_char.rs
use better_cstr::c;

fn main() {
    c!('c');
}
