tests/compile_fail/invalid_lit_char.stderr
error: Unsupported literal kind
 --> tests/compile_fail/invalid_lit_char.rs:4:8
  |
4 |     c!('c');
  |        ^^^
